...
  };

  return (
    <>
      <View style={styles.main}>
        <TouchableWithoutFeedback
          testID="serverIcon"
          onPress={() => setIsModalVisible(true)}>
          <View style={styles.wrapper} testID="appStatus">
            {getStatusIcon()}
          </View>
        </TouchableWithoutFeedback>
      </View>
...
