...
    justifyContent: 'space-between',
    paddingHorizontal: 24,
    paddingTop: 16,
    borderTopWidth: 1,
    borderTopColor: colors.lightgray,
  },
  cancelButton: {
    padding: 12,
    width: 50,
    alignItems: 'center',
  },
  cancelText: {
    color: colors.gray500,
...
